<resources>
    <string name="app_name">DummyApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="action_change_layout">Change the layout</string>
    <string name="choose_layout">Choose a layout</string>
    <string name="searchForPosts">search for posts</string>
    <string name="action_share">Share</string>
    <string name="copyTheLink">Copy the link</string>
    <string name="linkCopied">Link copied to clipboard</string>

    <string name="home">Home</string>
    <string name="accessory">Accessory</string>
    <string name="arcade">Arcade</string>
    <string name="fashion">Fashion</string>
    <string name="food">Food</string>
    <string name="heath">Heath</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="sports">Sports</string>
    <string name="about">About</string>
    <string name="no_data_available">No items currently…</string>
    <string name="SwipeRefreshLayout_connect_to_update">You must connect to the Internet to update the list</string>
    <string name="brief">This is dummy blog app for educational/testing purposes</string>
    <string name="contactus" translatable="false">Contact us: \n\n https://abtallaldigital.blogspot.com/p/contact-us.html</string>
    <string name="read_the_post_on_site">Read the post on site</string>
    <string name="lastPost">"You reached the last post"</string>
    <string name="add_to_favorites">Add to favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites_posts">Favorites Posts</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_post">Delete post</string>

</resources>