<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_add_to_favorites"
        android:orderInCategory="1"
        android:title="@string/add_to_favorites"
        android:icon="@drawable/ic_favorite_border"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="2"
        android:title="@string/action_share"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
        app:showAsAction="never" />

    <item
        android:id="@+id/copyTheLink"
        android:orderInCategory="3"
        android:title="@string/copyTheLink"
        app:showAsAction="never" />
</menu>