<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aboutFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.blogspot.abtallaldigital.ui.about.AboutFragment">

    <ImageView
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/smartphone"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/lighterGray" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/lighterGray" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/brief"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:autoLink="web"
        android:text="@string/contactus"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"

        />

</LinearLayout>